--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "covid-tracker",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node":"10.13.0",
+    "npm" : "6.4.1"
+  },
   "dependencies": {
     "@material-ui/core": "^4.9.7",
     "@testing-library/jest-dom": "^4.2.4",
